[gd_scene load_steps=11 format=2]

[ext_resource path="res://beam.png" type="Texture" id=3]
[ext_resource path="res://ground.png" type="Texture" id=4]
[ext_resource path="res://mastercrate.png" type="Texture" id=5]
[ext_resource path="res://Boxes/Package.tscn" type="PackedScene" id=6]
[ext_resource path="res://Boxes/Wheel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Score.gd" type="Script" id=12]
[ext_resource path="res://main.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512, 140 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 148 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 148 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 13 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="GroundCollider" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundCollider"]
position = Vector2( 512, 692 )
shape = SubResource( 3 )

[node name="WallL" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallL"]
position = Vector2( 80, 404 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="WallL"]
position = Vector2( 80, 408 )
scale = Vector2( 1, 1.25 )
texture = ExtResource( 3 )

[node name="WallR" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallR"]
position = Vector2( 528, 404 )
shape = SubResource( 5 )

[node name="Sprite2" type="Sprite" parent="WallR"]
position = Vector2( 528, 408 )
scale = Vector2( 1, 1.25 )
texture = ExtResource( 3 )

[node name="ScoreY0" type="Position2D" parent="."]
position = Vector2( 0, 100 )

[node name="Line2D" type="Line2D" parent="ScoreY0"]
points = PoolVector2Array( 0, 0, 550, 0 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="ScoreY0"]
margin_right = 88.0
margin_bottom = 20.0
text = "0 Points"

[node name="ScoreY100" type="Position2D" parent="."]
position = Vector2( 0, 256 )

[node name="Line2D" type="Line2D" parent="ScoreY100"]
points = PoolVector2Array( 0, 0, 550, 0 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="ScoreY100"]
margin_right = 88.0
margin_bottom = 20.0
text = "100 Points"

[node name="Score" type="Position2D" parent="."]
position = Vector2( 0, 500 )
script = ExtResource( 12 )

[node name="Line2D" type="Line2D" parent="Score"]
points = PoolVector2Array( 0, 0, 550, 0 )
width = 1.0
default_color = Color( 0.658824, 0, 0, 1 )

[node name="PtA" type="Position2D" parent="."]
position = Vector2( 64, 552 )

[node name="PtB" type="Position2D" parent="."]
position = Vector2( 544, 552 )

[node name="Boxes" type="Node2D" parent="."]

[node name="Package" parent="Boxes" instance=ExtResource( 6 )]
position = Vector2( 952, 512 )

[node name="Package2" parent="Boxes" instance=ExtResource( 6 )]
position = Vector2( 952, 440 )

[node name="Package3" parent="Boxes" instance=ExtResource( 6 )]
position = Vector2( 952, 368 )

[node name="Package4" parent="Boxes" instance=ExtResource( 6 )]
position = Vector2( 952, 296 )

[node name="Package5" parent="Boxes" instance=ExtResource( 6 )]
position = Vector2( 952, 224 )

[node name="Wheel" parent="Boxes" instance=ExtResource( 7 )]
position = Vector2( 608, 488 )

[node name="Wheel2" parent="Boxes" instance=ExtResource( 7 )]
position = Vector2( 728, 488 )

[node name="Wheel3" parent="Boxes" instance=ExtResource( 7 )]
position = Vector2( 680, 384 )

[node name="Wheel4" parent="Boxes" instance=ExtResource( 7 )]
position = Vector2( 848, 488 )

[node name="Wheel5" parent="Boxes" instance=ExtResource( 7 )]
position = Vector2( 800, 384 )

[node name="Wheel6" parent="Boxes" instance=ExtResource( 7 )]
position = Vector2( 616, 272 )

[node name="Wheel7" parent="Boxes" instance=ExtResource( 7 )]
position = Vector2( 728, 272 )

[node name="Wheel8" parent="Boxes" instance=ExtResource( 7 )]
position = Vector2( 664, 152 )

[node name="Spawn" type="Position2D" parent="."]
position = Vector2( 798, 83 )

[node name="RespawnFloor" type="Position2D" parent="."]
position = Vector2( 1279, 881 )

[node name="BoxFloor" type="Sprite" parent="."]
position = Vector2( 304, 568 )
rotation = 1.5708
scale = Vector2( 1, 1.72126 )
texture = ExtResource( 3 )

[node name="MasterCrate" type="Sprite" parent="."]
position = Vector2( 304, 808 )
texture = ExtResource( 5 )

[node name="Ground" type="Sprite" parent="."]
position = Vector2( 512, 680 )
texture = ExtResource( 4 )

[node name="CloudSpawn" type="Position2D" parent="."]
position = Vector2( -301, 92 )

[node name="CloudDespawn" type="Position2D" parent="."]
position = Vector2( 1779, 155 )

[node name="EndLevel" type="Button" parent="."]
margin_left = 852.0
margin_top = 15.0
margin_right = 1008.0
margin_bottom = 58.0
text = "END LEVEL"

[node name="StartScreen" type="ColorRect" parent="."]
visible = false
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 528.0
color = Color( 0.611765, 0.294118, 0.141176, 1 )

[node name="LevelName" type="RichTextLabel" parent="StartScreen"]
margin_left = 32.0
margin_top = 24.0
margin_right = 234.0
margin_bottom = 43.0
rect_scale = Vector2( 3, 3 )
text = "Level H4: Ball Pit"

[node name="ColorRect" type="ColorRect" parent="StartScreen"]
margin_left = 64.0
margin_top = 96.0
margin_right = 832.0
margin_bottom = 384.0
color = Color( 0.0823529, 0.0392157, 0.0392157, 1 )

[node name="LevelText" type="RichTextLabel" parent="StartScreen/ColorRect"]
margin_left = 8.0
margin_top = 16.0
margin_right = 451.0
margin_bottom = 155.0
rect_scale = Vector2( 1.5, 1.5 )
text = "The employee handbook clearly prohibits playing in it.

You have 25 seconds."

[node name="Button" type="Button" parent="StartScreen"]
margin_left = 344.0
margin_top = 400.0
margin_right = 552.0
margin_bottom = 448.0
text = "START LEVEL"

[node name="EndScreen" type="ColorRect" parent="."]
visible = false
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 528.0
color = Color( 0.611765, 0.294118, 0.141176, 1 )

[node name="LevelName" type="RichTextLabel" parent="EndScreen"]
margin_left = 32.0
margin_top = 24.0
margin_right = 234.0
margin_bottom = 43.0
rect_scale = Vector2( 3, 3 )
text = "Level Complete!"

[node name="ColorRect" type="ColorRect" parent="EndScreen"]
margin_left = 64.0
margin_top = 96.0
margin_right = 832.0
margin_bottom = 384.0
color = Color( 0.0823529, 0.0392157, 0.0392157, 1 )

[node name="LevelText" type="RichTextLabel" parent="EndScreen/ColorRect"]
margin_left = 8.0
margin_top = 16.0
margin_right = 451.0
margin_bottom = 155.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Scoring:

Height Score = "

[node name="NextLevel" type="Button" parent="EndScreen"]
margin_left = 344.0
margin_top = 400.0
margin_right = 552.0
margin_bottom = 448.0
text = "NEXT LEVEL"

[node name="Hard5" type="Node" parent="EndScreen/NextLevel"]

[node name="LevelTime" type="RichTextLabel" parent="."]
margin_left = 728.0
margin_top = 16.0
margin_right = 756.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
text = "0"

[node name="LevelTimeMax" type="RichTextLabel" parent="."]
margin_left = 784.0
margin_top = 16.0
margin_right = 812.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
text = "25"

[node name="Slash" type="RichTextLabel" parent="."]
margin_left = 768.0
margin_top = 16.0
margin_right = 796.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
text = "/"

[connection signal="pressed" from="EndLevel" to="." method="_on_EndLevel_pressed"]
[connection signal="pressed" from="StartScreen/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="EndScreen/NextLevel" to="." method="_on_NextLevel_pressed"]
